Fix compilation of Java 17+ sources